--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@ckeditor/ckeditor5-build-classic": "^16.0.0",
     "angular-8-datatable": "^1.0.2",
     "angular-datatables": "^8.0.0",
+    "angular-local-storage": "^0.7.1",
+    "angular-webstorage-service": "^1.0.2",
     "bootstrap": "^4.4.1",
     "ckeditor4-angular": "^1.0.1",
     "datatables.net": "^1.10.20",
     "datatables.net-dt": "^1.10.20",
     "ng-angular8-datatable": "^0.9.11",
     "ngx-ckeditor": "^8.0.0",
+    "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
